--- a/app/src/main/res/layout/comics_details_fragment.xml
+++ b/app/src/main/res/layout/comics_details_fragment.xml
@@ -19,14 +19,15 @@
         android:id="@+id/ivDetailsComics"
         android:layout_width="0dp"
         android:layout_height="140dp"
-        android:layout_marginStart="63dp"
-        android:layout_marginTop="122dp"
-        android:layout_marginEnd="63dp"
-        android:layout_marginBottom="124dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginBottom="120dp"
         app:layout_constraintBottom_toTopOf="@+id/tvDetailsPublicationDate"
         app:layout_constraintEnd_toStartOf="@+id/tvDetailsDescription"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvDetailsTitle"
+        app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@mipmap/ic_launcher" />
 
     <TextView
@@ -95,9 +96,9 @@
     <TextView
         android:id="@+id/tvDetailsDescription"
         android:layout_width="0dp"
-        android:layout_height="146dp"
-        android:layout_marginTop="122dp"
-        android:layout_marginEnd="24dp"
+        android:layout_height="140dp"
+        android:layout_marginTop="120dp"
+        android:layout_marginEnd="20dp"
         android:text="@string/Description"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ivDetailsComics"
